# Meridian

./: .env.example  CHANGELOG.md  README.md  context.md  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml  smoke-production.yml
docs/: incident-response.md  private-beta-qa.md  product-replan.md  sdk.md
examples/dify-support-triage/: README.md  meridian-http-body.json
examples/live-workflow/: README.md  package-lock.json  package.json
prisma/: schema.prisma  seed.mjs
scripts/: build.mjs  release-safety.mjs  smoke.mjs  verify-sdk-packages.mjs
sdk/js/: README.md  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/argusgrid/: __init__.py
sdk/python/examples/: send_test_run.py
sdk/python/meridian/: __init__.py
sdk/python/tests/: test_examples.py  test_meridian.py
src/app/: globals.css  layout.tsx  page.tsx
src/inngest/: client.ts  functions.ts
src/lib/: access-policy.d.ts  api-session.ts  (+60 more)
tests/: access-policy.test.mjs  alert-noise-control.test.mjs  alert-rule-templates.test.mjs  api-auth-headers.test.mjs  api-setup-help.test.mjs  dify-support-triage.test.mjs  first-workflow-launchpad.test.mjs  global-search.test.mjs  integration-wizard.test.mjs  log-metadata.test.mjs  provider-onboarding.test.mjs  release-readiness-source.test.mjs  release-safety.test.mjs  report-assets.test.mjs  report-client-proof.test.mjs  report-periods.test.mjs  rest-metric-onboarding.test.mjs  run-alert-rules.test.mjs  run-metrics.test.mjs  sdk-onboarding.test.mjs  sdk-package-metadata.test.mjs  telemetry-evidence.test.mjs  tutorial.test.mjs
(+87 files in other folders)
