[project]
name = "meridian"
version = "0.1.0"
description = "Python tracing SDK for Meridian AI automation telemetry."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Meridian" }]
license = "MIT"
keywords = ["meridian", "ai-ops", "automation", "telemetry", "tracing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://meridian.hrudainirmal.in"
Repository = "https://github.com/Hrudai-Nirmal/Meridian"
Issues = "https://github.com/Hrudai-Nirmal/Meridian/issues"

[tool.setuptools.package-data]
meridian = ["py.typed"]

[tool.setuptools.packages.find]
include = ["meridian", "argusgrid"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
